# timeseries_viewer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
docs/: README.md  application-plan.md  changelog.md  configuration.md  contributing.md  data-formats.md  install-build.md  operations.md  security.md  troubleshooting.md  usage.md  verification.md
include/timeseries_viewer/: app_model.hpp  app_ui.hpp  core.hpp  nfd_dialog_helpers.hpp
product-breakdown/: README.md  decision-log.md  traceability-map.md
product-breakdown/00-intent/: layer.md
product-breakdown/01-product/: layer.md  ui-description.md  use-cases.md
product-breakdown/02-architecture/: layer.md
product-breakdown/03-implementation/: layer.md
product-breakdown/04-verification/: layer.md
product-breakdown/05-operation/: layer.md
product-breakdown/06-evolution/: improvement-backlog.md  layer.md  undeveloped_improvements.md  undiscovered-improvements.md
product-breakdown/06-evolution/improvements/: README.md  imp-005-gui-integration-verification.md
product-breakdown/06-evolution/improvements/candidates/: imp-013-sqlite-adapter.md  imp-016-app-model-submodules.md  imp-017-ui-rendering.md  imp-018-imgui-backend.md
product-breakdown/06-evolution/improvements/defered/: imp-004-native-top-level-windows.md
product-breakdown/06-evolution/improvements/done/: imp-001-rich-plot-editing.md  imp-002-parameter-binding-manager.md  imp-003-per-tab-expression-editor.md  imp-005-gui-integration-verification.md  imp-006-large-data-scaling.md  imp-007-rendered-gui-workflow-verification.md  imp-009-parameter-menu-discoverability.md  (+16 more)
product-breakdown/06-evolution/reviews/: doc-review-2026-06-04.md
src/app/: app_internal.hpp  app_model.cpp  cache.cpp  main.cpp  project.cpp  source.cpp
src/app/selection/: binding.cpp
src/app/windows/: workspace.cpp
src/expr/: expr.hpp
src/io/csv/: csv.hpp
src/io/sqlite/: sqlite.hpp
src/model/: config.hpp  equality.hpp  registry.hpp  types.hpp  utility.hpp
src/persist/: persist.hpp
src/timeseries_viewer/: app_model.hpp  app_ui.hpp  core.hpp
src/ui/: constants.hpp  render.hpp
src/ui/backend/: imgui_backend.cpp  imgui_backend.hpp
src/ui/panels/: inspector.hpp  parameter.hpp  status.hpp
src/ui/plot/: workspace.hpp
tests/: app_model_tests.cpp  core_tests.cpp  gui_render_tests.cpp
tests/fixtures/: sample_datetime.csv  sample_numeric.csv
tests/support/: gui_harness.hpp  scripted_gui_backend.hpp  sqlite_fixture.hpp  temp_dir.hpp
(+4 files in other folders)
